# tree-sitter-ptuscript

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  testfile  tree-sitter-ptuscript.wasm  tree-sitter.json
bindings/c/: tree-sitter-ptuscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ptuscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPtuscript/: ptuscript.h
bindings/swift/TreeSitterPtuscriptTests/: TreeSitterPtuscriptTests.swift
examples/: advanced1.ptu  advanced2.ptu  basic.ptu  playground.ptu
queries/ptuscript/: folds.scm  highlights.scm  indents.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
