[package]
name = "tree-sitter-ptuscript"
description = "Parser for the PTUScript language from RTRT"
version = "0.1.0"
authors = ["Pierre Mollard <pierre.mollard@proton.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ptuscript"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://githubcom/pierre-mollard/tree-sitter-ptuscript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
