[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-ptuscript"
description = "Parser for the PTUScript language from RTRT"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "ptuscript"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Pierre Mollard", email = "pierre.mollard@proton.me" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://githubcom/pierre-mollard/tree-sitter-ptuscript"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
